// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwitterImage Component matches the snapshot for a landscape image in a summary card 1`] = `
<div
  className="TwitterImage__TwitterImageContainer-y3dnut-0 dGvwDE"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="TwitterImage__StyledImage-y3dnut-1 fdqxqZ"
    role="img"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot for a landscape image in a summary-large-image card 1`] = `
<div
  className="TwitterImage__TwitterImageContainer-y3dnut-0 kGjxWb"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="TwitterImage__StyledImage-y3dnut-1 fdqxqZ"
    role="img"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot for a square image in a summary card 1`] = `
<div
  className="TwitterImage__TwitterImageContainer-y3dnut-0 dGvwDE"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="TwitterImage__StyledImage-y3dnut-1 iewbvp"
    role="img"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot for a square image in a summary-large-image card 1`] = `
<div
  className="TwitterImage__TwitterImageContainer-y3dnut-0 kGjxWb"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    aria-label=""
    className="TwitterImage__StyledImage-y3dnut-1 iewbvp"
    role="img"
  />
</div>
`;

exports[`TwitterImage Component matches the snapshot in the loading state 1`] = `
<div
  className="TwitterImage__BaseImage-y3dnut-2 TwitterImage__PlaceholderImage-y3dnut-3 dxinJg fJMSpl"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Select image
</div>
`;
